Bug #21180: Subselect with index for both WHERE and ORDER BY produces empty result  Reseting subqueries with "quick" access methods was incomplete.  Partially backported the correct reseting of QUICK_SELECTs from 5.x.